--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
     <article class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img alt="logo for lead generation" src="./assets/images/lead-generation.png"></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img alt="logo for brand-awareness" src=./assets/images/brand-awareness.png />
+            <img alt="logo for brand-awareness" src=./assets/images/brand-awareness.png></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
